ci: fix benchmarks compilation and jzy3d rate limits by running sequentially